Started using new technique for GET requests.